# bank-app-2023-mateusz-kurowskiUG

./: .coveragerc  .gitignore  LICENSE  README.md  ToDo.md  compose.yml  pyproject.toml  requirements.txt
.github/workflows/: flask-api.yml  gherkin-tests.yml  gherkin.yml  python-app.yml
app/: Account.py  Account_company.py  Account_personal.py  AccountsRecord.py  Konto.py  SMTPServer.py  api.py
app/api_tests/: tes_api.py  test_api.py  test_api_transfers.py  test_crud.py  test_performance.py
app/tests/: test_account.py  test_account_records.py  test_basic_transfers.py  test_company_credits.py  test_create_bank_account.py  test_create_bank_company_account.py  test_create_bank_personal_account.py  test_credits.py  test_express_transfers.py  test_mailing.py  test_personal_credits.py  test_transfers.py
features/: account_registry.feature  environment.py  transfers.feature
features/steps/: account_registry.py  transfers.py
