[tool.poetry]
name = "testowanie"
version = "0.1.0"
description = ""
authors = ["Mateusz Kurowski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
parameterized = "^0.9.0"
coverage = "^7.3.2"
typing-extensions = "^4.8.0"
flask = "^3.0.0"
requests = "^2.31.0"
pymongo = "^4.6.1"
behave = "^1.2.6"
unittest-assertions = "^3.1"
selenium = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "app/api.py"
]